<resources>
    <string name="app_name">Soft Player</string>
    <string name="main_button_text">Add</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="music_hint_word">Enter the name</string>
    <string name="button_save">Save Music</string>
    <string name="empty_not_saved">empty_not_saved</string>
    <string name="main_lyrics_button">My Lyrics</string>
    <string name="main_search_button">Search For Lyrics</string>
    <string name="main_hello_text">Hello To U</string>
    <string name="search_button_text">Search</string>
    <string name="search_input_hint">Search in Youtube</string>
    <string name="content_description">image</string>
    <string name="bottom_nav_search">Search</string>
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_notification">Notification</string>
    <string name="bottom_nav_library">Library</string>
    <string name="bottom_nav_profile">Profile</string>
    <string name="library_pause_button">Pause</string>
    <string name="library_play_button">Play</string>
    <string name="library_stop_button">Stop</string>
</resources>
