<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_nav_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/bottom_nav_home"/>

    <item
        android:id="@+id/bottom_nav_search"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/bottom_nav_search"/>

    <item
        android:id="@+id/bottom_nav_library"
        android:enabled="true"
        android:icon="@drawable/ic_library"
        android:title="@string/bottom_nav_library"/>

    <item
        android:id="@+id/bottom_nav_notification"
        android:enabled="true"
        android:icon="@drawable/ic_alarm"
        android:title="@string/bottom_nav_notification"/>

    <item
        android:id="@+id/bottom_nav_profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/bottom_nav_profile"/>

</menu>