<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        tools:context=".view.activity.MainActivity">

        <EditText
            android:id="@+id/music_item_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/main_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:autofillHints=""
            android:inputType="text" />

        <!--        <androidx.recyclerview.widget.RecyclerView-->
        <!--            android:id="@+id/music_recycler_view"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginTop="@dimen/big_padding"-->
        <!--            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"-->
        <!--            app:layout_constraintBottom_toBottomOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/music_item_input"-->
        <!--            app:layout_constraintVertical_bias="0.0"-->
        <!--            tools:layout_editor_absoluteX="26dp" />-->

        <Button
            android:id="@+id/pauseBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="128dp"
            android:enabled="false"
            android:text="@string/library_pause_button"
            app:layout_constraintEnd_toStartOf="@+id/playBtn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/music_item_input" />

        <Button
            android:id="@+id/playBtn"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:text="@string/library_play_button"
            app:layout_constraintBottom_toBottomOf="@+id/pauseBtn"
            app:layout_constraintEnd_toStartOf="@+id/stopBtn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/pauseBtn"
            app:layout_constraintTop_toTopOf="@+id/pauseBtn"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/stopBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/library_stop_button"
            app:layout_constraintBottom_toBottomOf="@+id/playBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/playBtn"
            app:layout_constraintTop_toTopOf="@+id/playBtn" />

        <SeekBar
            android:id="@+id/seek_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/main_padding"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="@dimen/main_padding"
            android:saveEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pauseBtn" />

        <TextView
            android:id="@+id/tv_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_padding"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seek_bar" />

        <TextView
            android:id="@+id/tv_due"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/main_padding"
            android:layout_marginEnd="@dimen/small_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seek_bar" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
